--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,20 +8,6 @@ on:
       - '**'  # Run CI builds on pushes to any branch
   workflow_dispatch:
     inputs:
-      branch_name:
-        description: 'Branch name (e.g., "1-16-5" or "1-20-1")'
-        required: true
-        default: '1-20-1'
-        type: string
-      java_version:
-        description: 'Java version (16, 17 or 21)'
-        required: false
-        default: '17'
-        type: choice
-        options:
-          - 16
-          - 17
-          - 21
       release_name:
         description: 'Release name (e.g., v1.0.0 or "Beta Build")'
         required: true
@@ -40,40 +26,35 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.inputs.branch_name }}  # Use provided branch for manual dispatch
 
-    - name: Set up JDK
-      uses: actions/setup-java@v4
+    - name: Install Rust toolchain
+      uses: dtolnay/rust-toolchain@stable
       with:
-        java-version: ${{ github.event.inputs.java_version || '17' }}
-        distribution: 'temurin'
+        toolchain: stable
+        targets: x86_64-pc-windows-msvc
+        components: rustfmt, clippy
 
-    - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@v1
+    - name: Run cargo check
+      run: cargo check
 
-    - name: Run Gradle check
-      uses: gradle/gradle-build-action@v3
-      with:
-        arguments: check
+    - name: Run cargo test
+      run: cargo test
 
-    - name: Run Gradle build
-      uses: gradle/gradle-build-action@v3
-      with:
-        arguments: build
+    - name: Run cargo build (release)
+      run: cargo build --release --locked
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: MinePy-${{ github.event.inputs.branch_name || github.ref_name }}-${{ github.event.inputs.java_version || '17' }}-${{ github.run_id }}  # Include branch and Java in artifact name
+        name: FlurionsPythonBindings-${{ github.run_id }}  # Unique name per run
         path: |
-          build/libs/*.jar
-          build/libs/*.sources.jar
+          target/release/FlurionsPythonBindings.exe
+          Cargo.lock
         retention-days: 90  # Keep artifacts for 90 days
 
     - name: Create Release (only on manual dispatch)
@@ -81,12 +62,9 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.event.inputs.release_name }}
-        name: ${{ github.event.inputs.release_name }} (Branch: ${{ github.event.inputs.branch_name }}, Java: ${{ github.event.inputs.java_version }})
-        body: |
-          Branch: ${{ github.event.inputs.branch_name }}
-          Java: ${{ github.event.inputs.java_version }}
-          ${{ github.event.inputs.release_notes }}
-        files: build/libs/*.jar
+        name: ${{ github.event.inputs.release_name }}
+        body: ${{ github.event.inputs.release_notes }}
+        files: target/release/FlurionsPythonBindings.exe
         generate_release_notes: false
         draft: false
         prerelease: ${{ github.event.inputs.pre_release }}
@@ -99,4 +77,4 @@ jobs:
     needs: build
     steps:
     - name: Notify CI Success
-      run: echo "CI build successful on branch ${{ github.ref_name }} with Java ${{ github.event.inputs.java_version || '17' }} - Artifacts uploaded and ready for download"
+      run: echo "CI build successful on branch ${{ github.ref_name }} - Artifacts uploaded and ready for download"
